force-app/main/default/objects/Sana_User_Completion__c/Sana_User_Completion__c.object-meta.xml
<CustomObject>
    <description>Stores user completion analytics data from Sana Learning Platform</description>
    <label>Sana User Completion</label>
    <nameField>
        <displayFormat>SUC-{00000}</displayFormat>
        <label>Sana User Completion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sana User Completions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 