force-app/main/default/objects/Sana_User_Completion__c/fields/Courses_Completed__c.field-meta.xml
<CustomField>
    <fullName>Courses_Completed__c</fullName>
    <description>Number of courses completed by the user</description>
    <label>Courses Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 