force-app/main/default/objects/Sana_User_Completion__c/fields/Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date__c</fullName>
    <description>Date and time when this record was last synced from Sana</description>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField> 