force-app/main/default/objects/Sana_User_Completion__c/fields/Sana_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Sana_User_ID__c</fullName>
    <description>Unique identifier from Sana Learning Platform</description>
    <externalId>true</externalId>
    <label>Sana User ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField> 