force-app/main/default/objects/Sana_User_Completion__c/fields/User_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Display_Name__c</fullName>
    <description>User display name from Sana</description>
    <label>User Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 