force-app/main/default/objects/Sana_User_Completion__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <description>User email address from Sana</description>
    <label>User Email</label>
    <type>Email</type>
</CustomField> 